--- a/board-project-admin/src/main/resources/templates/layouts/layout-main-table.th.xml
+++ b/board-project-admin/src/main/resources/templates/layouts/layout-main-table.th.xml
@@ -5,7 +5,7 @@
   <attr sel="#breadcrumb-home" th:href="@{/}" />
   <attr sel="#breadcrumb-current-page" th:text="${title}" />
   <attr sel="#card-title" th:text="|${title} 게시판|" />
-  <attr sel="#main-table" th:replace="${table}" />
-  <attr sel="#layout-card-todolist" th:replace="layouts/layout-card-todolist :: #layout-card-todolist" />
-  <attr sel="#layout-card-chat" th:replace="layouts/layout-card-chat :: #layout-card-chat" />
+  <attr sel="#main-table" th:replace="~{${table}}" />
+  <attr sel="#layout-card-todolist" th:replace="~{layouts/layout-card-todolist :: #layout-card-todolist}" />
+  <attr sel="#layout-card-chat" th:replace="~{layouts/layout-card-chat :: #layout-card-chat}" />
 </thlogic>
