1. 프로젝트 버전을 스프링부트 2.7.0으로 변경함 -> 3.x.x의 정보가 너무 적어서 진행이 힘든상황

--- a/board-project-admin/src/main/resources/templates/layouts/layout-left-aside.th.xml
+++ b/board-project-admin/src/main/resources/templates/layouts/layout-left-aside.th.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0"?>
 <thlogic>
-  <attr sel="#admin-logo-link" th:href="@{/}" />
-  <attr sel="#user-profile" th:href="@{#}" sec:authorize="isAuthenticated()" sec:authentication="principal.nickname" />
-<!--  TODO: #request 방식은 3.xx 버전부터 사라졌다고함.. -->
-  <attr sel="#management-category" th:classappend="${#request.requestURI.startsWith('/management')} ? 'active'" />
-  <attr
-      sel="#article-management"
-      th:href="@{/management/articles}"
-      th:classappend="${#request.requestURI.equals('/management/articles')} ? 'active'"
-  />
-  <attr
-      sel="#article-comment-management"
-      th:href="@{/management/article-comments}"
-      th:classappend="${#request.requestURI.equals('/management/article-comments')} ? 'active'"
-  />
-  <attr
-      sel="#user-account-management"
-      th:href="@{/management/user-accounts}"
-      th:classappend="${#request.requestURI.equals('/management/user-accounts')} ? 'active'"
-  />
-  <attr sel="#admin-category" th:classappend="${#request.requestURI.startsWith('/admin')} ? 'active'" />
-  <attr
-      sel="#admin-members"
-      th:href="@{/admin/members}"
-      th:classappend="${#request.requestURI.equals('/admin/members')} ? 'active'"
-  />
+<!--  <attr sel="#admin-logo-link" th:href="@{/}" />-->
+<!--  <attr sel="#user-profile" th:href="@{#}" sec:authorize="isAuthenticated()" sec:authentication="principal.nickname" />-->
+<!--&lt;!&ndash;  TODO: #request 방식은 3.xx 버전부터 사라졌다고함.. &ndash;&gt;-->
+<!--  <attr sel="#management-category" th:classappend="${#request.requestURI.startsWith('/management')} ? 'active'" />-->
+<!--  <attr-->
+<!--      sel="#article-management"-->
+<!--      th:href="@{/management/articles}"-->
+<!--      th:classappend="${#request.requestURI.equals('/management/articles')} ? 'active'"-->
+<!--  />-->
+<!--  <attr-->
+<!--      sel="#article-comment-management"-->
+<!--      th:href="@{/management/article-comments}"-->
+<!--      th:classappend="${#request.requestURI.equals('/management/article-comments')} ? 'active'"-->
+<!--  />-->
+<!--  <attr-->
+<!--      sel="#user-account-management"-->
+<!--      th:href="@{/management/user-accounts}"-->
+<!--      th:classappend="${#request.requestURI.equals('/management/user-accounts')} ? 'active'"-->
+<!--  />-->
+<!--  <attr sel="#admin-category" th:classappend="${#request.requestURI.startsWith('/admin')} ? 'active'" />-->
+<!--  <attr-->
+<!--      sel="#admin-members"-->
+<!--      th:href="@{/admin/members}"-->
+<!--      th:classappend="${#request.requestURI.equals('/admin/members')} ? 'active'"-->
+<!--  />-->
 
-  <attr sel="#visit-count" th:text="${visitCount}" />
+<!--  <attr sel="#visit-count" th:text="${visitCount}" />-->
 </thlogic>
