--- a/board-project-admin/src/main/resources/templates/layouts/layout-main-table.th.xml
+++ b/board-project-admin/src/main/resources/templates/layouts/layout-main-table.th.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <thlogic>
-  <attr sel="#layout-main" th:fragment="common_main_table(title, table)" />
+<!--  <attr sel="#layout-main" th:fragment="common_main_table(title, table)" />-->
   <attr sel="#main-header-title" th:text="${title}" />
   <attr sel="#breadcrumb-home" th:href="@{/}" />
   <attr sel="#breadcrumb-current-page" th:text="${title}" />
