--- a/board-project-admin/src/main/resources/templates/starter.html
+++ b/board-project-admin/src/main/resources/templates/starter.html
@@ -161,7 +161,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
       <!-- Brand Logo -->
-      <a href="/static" class="brand-link">
+      <a href="/" class="brand-link">
         <img src="/images/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
         <span class="brand-text font-weight-light">AdminLTE 3</span>
       </a>
